# passfx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: code-quality.yml  dependency-review.yml  install-tests.yml  labeler.yml  performance-tests.yml  pr-title-labeler.yml  publish.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  RELEASING.md  SECURITY.md  USER_GUIDE.md  security_findings.md
homebrew/: passfx.rb
passfx/: __init__.py  app.py  cli.py
passfx/core/: crypto.py  models.py  vault.py
passfx/screens/: __init__.py  cards.py  envs.py  generator.py  help.py  login.py  main_menu.py  notes.py  passwords.py  phones.py  recovery.py  settings.py
passfx/search/: engine.py
passfx/styles/: passfx.tcss
passfx/ui/: logo.py  menu.py
passfx/utils/: clipboard.py  generator.py  io.py  platform_security.py  strength.py
passfx/widgets/: __init__.py  id_card_modal.py  keycap_footer.py  matrix_rain.py  search_overlay.py  terminal.py
scripts/: attribution_guard.py
tests/: README.md
tests/app/: test_app_lifecycle.py
tests/cli/: test_cli_entrypoint.py
tests/edge/: test_failure_modes.py
tests/install/: README.md  validate_install.sh
tests/screens/: test_credential_screens.py
tests/ui/: test_search_state_machine.py
tests/unit/core/: test_models.py  test_vault.py
tests/utils/: test_clipboard.py  test_password_generator.py
