[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passfx"
version = "1.0.0"
description = "A secure, stylish terminal password manager. Your secrets are safe with us. Probably."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PassFX Team", email = "secrets@/dev/null" }
]
keywords = ["password", "manager", "cli", "security", "encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "pyperclip>=1.8.0",
    "zxcvbn>=4.4.0",
    "textual>=0.50.0",
]

[project.scripts]
passfx = "passfx.cli:main"

[project.urls]
Homepage = "https://github.com/passfx/passfx"
Documentation = "https://github.com/passfx/passfx#readme"
Issues = "https://github.com/passfx/passfx/issues"

[tool.hatch.build.targets.wheel]
packages = ["passfx"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
