[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passfx"
version = "1.0.0"
description = "A secure, stylish terminal password manager. Your secrets are safe with us. Probably."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PassFX Team", email = "secrets@/dev/null" }
]
keywords = ["password", "manager", "cli", "security", "encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=14.0.0,<15.0.0",
    "cryptography>=46.0.0,<47.0.0",
    "pyperclip>=1.11.0,<2.0.0",
    "zxcvbn>=4.5.0,<5.0.0",
    "textual>=6.11.0,<7.0.0",
    "setproctitle>=1.3.7,<2.0.0",
    "simple-term-menu>=1.6.6,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "types-pyperclip>=1.9.0,<2.0.0",
    "types-zxcvbn>=4.5.0,<5.0.0",
    "mypy>=1.19.0,<2.0.0",
    "ruff>=0.14.0,<1.0.0",
    "bandit>=1.9.0,<2.0.0",
]

[project.scripts]
passfx = "passfx.cli:main"

[project.urls]
Homepage = "https://github.com/dinesh-git17/passfx"
Documentation = "https://github.com/dinesh-git17/passfx#readme"
Issues = "https://github.com/dinesh-git17/passfx/issues"

[tool.hatch.build.targets.wheel]
packages = ["passfx"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = [".venv", "venv", "__pycache__", ".git", "dist", "build"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "simple_term_menu.*"
ignore_missing_imports = true

[tool.pylint.main]
fail-under = 10.0
jobs = 0

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "protected-access",
    "import-error",
    "logging-fstring-interpolation",
]
